; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/makefs/ffs/extr_ffs_bswap.c_ffs_dinode1_swap.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/makefs/ffs/extr_ffs_bswap.c_ffs_dinode1_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ufs1_dinode = type { i8*, i8*, i8*, i8*, i8*, i32, i32, i8*, i8*, i8*, i8*, i8*, i8*, i32, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ffs_dinode1_swap(%struct.ufs1_dinode* %0, %struct.ufs1_dinode* %1) #0 {
  %3 = alloca %struct.ufs1_dinode*, align 8
  %4 = alloca %struct.ufs1_dinode*, align 8
  store %struct.ufs1_dinode* %0, %struct.ufs1_dinode** %3, align 8
  store %struct.ufs1_dinode* %1, %struct.ufs1_dinode** %4, align 8
  %5 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %6 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %5, i32 0, i32 15
  %7 = load i8*, i8** %6, align 8
  %8 = call i8* @bswap16(i8* %7)
  %9 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %10 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %9, i32 0, i32 15
  store i8* %8, i8** %10, align 8
  %11 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %12 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %11, i32 0, i32 14
  %13 = load i8*, i8** %12, align 8
  %14 = call i8* @bswap16(i8* %13)
  %15 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %16 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %15, i32 0, i32 14
  store i8* %14, i8** %16, align 8
  %17 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %18 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %17, i32 0, i32 13
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @bswap64(i32 %19)
  %21 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %22 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %21, i32 0, i32 13
  store i32 %20, i32* %22, align 8
  %23 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %24 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %23, i32 0, i32 12
  %25 = load i8*, i8** %24, align 8
  %26 = call i8* @bswap32(i8* %25)
  %27 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %28 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %27, i32 0, i32 12
  store i8* %26, i8** %28, align 8
  %29 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %30 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %29, i32 0, i32 11
  %31 = load i8*, i8** %30, align 8
  %32 = call i8* @bswap32(i8* %31)
  %33 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %34 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %33, i32 0, i32 11
  store i8* %32, i8** %34, align 8
  %35 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %36 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %35, i32 0, i32 10
  %37 = load i8*, i8** %36, align 8
  %38 = call i8* @bswap32(i8* %37)
  %39 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %40 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %39, i32 0, i32 10
  store i8* %38, i8** %40, align 8
  %41 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %42 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %41, i32 0, i32 9
  %43 = load i8*, i8** %42, align 8
  %44 = call i8* @bswap32(i8* %43)
  %45 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %46 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %45, i32 0, i32 9
  store i8* %44, i8** %46, align 8
  %47 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %48 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %47, i32 0, i32 8
  %49 = load i8*, i8** %48, align 8
  %50 = call i8* @bswap32(i8* %49)
  %51 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %52 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %51, i32 0, i32 8
  store i8* %50, i8** %52, align 8
  %53 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %54 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %53, i32 0, i32 7
  %55 = load i8*, i8** %54, align 8
  %56 = call i8* @bswap32(i8* %55)
  %57 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %58 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %57, i32 0, i32 7
  store i8* %56, i8** %58, align 8
  %59 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %60 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %59, i32 0, i32 6
  %61 = load i32, i32* %60, align 4
  %62 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %63 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %62, i32 0, i32 6
  %64 = load i32, i32* %63, align 4
  %65 = call i32 @memcpy(i32 %61, i32 %64, i32 4)
  %66 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %67 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %66, i32 0, i32 5
  %68 = load i32, i32* %67, align 8
  %69 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %70 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %69, i32 0, i32 5
  %71 = load i32, i32* %70, align 8
  %72 = call i32 @memcpy(i32 %68, i32 %71, i32 4)
  %73 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %74 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %73, i32 0, i32 4
  %75 = load i8*, i8** %74, align 8
  %76 = call i8* @bswap32(i8* %75)
  %77 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %78 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %77, i32 0, i32 4
  store i8* %76, i8** %78, align 8
  %79 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %80 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %79, i32 0, i32 3
  %81 = load i8*, i8** %80, align 8
  %82 = call i8* @bswap32(i8* %81)
  %83 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %84 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %83, i32 0, i32 3
  store i8* %82, i8** %84, align 8
  %85 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %86 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %85, i32 0, i32 2
  %87 = load i8*, i8** %86, align 8
  %88 = call i8* @bswap32(i8* %87)
  %89 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %90 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %89, i32 0, i32 2
  store i8* %88, i8** %90, align 8
  %91 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %92 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %91, i32 0, i32 1
  %93 = load i8*, i8** %92, align 8
  %94 = call i8* @bswap32(i8* %93)
  %95 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %96 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %95, i32 0, i32 1
  store i8* %94, i8** %96, align 8
  %97 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %3, align 8
  %98 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %97, i32 0, i32 0
  %99 = load i8*, i8** %98, align 8
  %100 = call i8* @bswap32(i8* %99)
  %101 = load %struct.ufs1_dinode*, %struct.ufs1_dinode** %4, align 8
  %102 = getelementptr inbounds %struct.ufs1_dinode, %struct.ufs1_dinode* %101, i32 0, i32 0
  store i8* %100, i8** %102, align 8
  ret void
}

declare dso_local i8* @bswap16(i8*) #1

declare dso_local i32 @bswap64(i32) #1

declare dso_local i8* @bswap32(i8*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
